add hover color in product cart

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,11 @@
 {
 	"cSpell.words": [
 		"Airpods",
+		"browserslist",
 		"headlessui",
 		"reduxjs",
 		"semibold",
+		"tailwindcss",
 		"Tixio"
 	]
 }
